# similarity-measure-benchmarking

./: Makefile  README.md  bench_distance_measurement.py  bench_knn.py  main.py  pyproject.toml  types.py
.profiles/: distance_calculation_euclidian.html  distance_calculation_squared_euclidian.html  distance_canberra.html  distance_chebychev.html  distance_cosine.html  distance_manhatten.html  distance_pearson.html  get_10_nearest_neighbours_canberra.html  get_10_nearest_neighbours_chebychev.html  get_10_nearest_neighbours_cosine.html  get_10_nearest_neighbours_euclidian.html  get_10_nearest_neighbours_manhatten.html  get_10_nearest_neighbours_pearson.html  get_10_nearest_neighbours_squared_euclidian.html  get_5_nearest_neighbours_canberra.html  get_5_nearest_neighbours_chebychev.html  get_5_nearest_neighbours_cosine.html  get_5_nearest_neighbours_euclidian.html  get_5_nearest_neighbours_manhatten.html  get_5_nearest_neighbours_pearson.html  get_5_nearest_neighbours_squared_euclidian.html
algorithms/: canberra_distance.py  chebychev_distance.py  cosine_distance.py  pearson_distance.py  squared_euclidian_distance.py
src/algorithms/: canberra_distance.py  cosine_distance.py  euclidian_distance.py  manhatten_distance.py  pearson_distance.py
src/tests/: test_canberra_distance.py  test_chebychev_distance.py  (+5 more)
tests/: test_canberra_distance.py  test_chebychev_distance.py  test_cosine_distance.py  test_euclidian_distance.py  test_manhatten_distance.py  test_pearson_distance.py  test_squared_euclidian_distance.py
utils/: k_nearest_neighbour.py  operators.py  types.py
(+2 files in other folders)
